[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/grapher.gd" type="Script" id=1]
[ext_resource path="res://scripts/line_graph.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="line_graph" type="Node2D"]
z_index = 3
script = ExtResource( 2 )

[node name="viewportContainer" type="ViewportContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="viewport" type="Viewport" parent="viewportContainer"]
size = Vector2( 400, 400 )
transparent_bg = true
handle_input_locally = false
render_target_clear_mode = 1
render_target_update_mode = 3

[node name="grapher" type="Node2D" parent="viewportContainer/viewport"]
script = ExtResource( 1 )

[node name="ui" type="Node2D" parent="."]
z_index = -1

[node name="panel" type="Panel" parent="ui"]
margin_right = 600.0
margin_bottom = 650.0
custom_styles/panel = SubResource( 1 )

[node name="exit" type="Button" parent="ui"]
margin_left = 580.0
margin_right = 600.0
margin_bottom = 20.0

[node name="move" type="Button" parent="ui"]
margin_left = 560.0
margin_right = 580.0
margin_bottom = 20.0

[connection signal="pressed" from="ui/exit" to="." method="_on_exit_pressed"]
[connection signal="button_down" from="ui/move" to="." method="_on_move_button_down"]
[connection signal="button_up" from="ui/move" to="." method="_on_move_button_up"]
